gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gschem

Most recent changes (version wise) are at the top of this file
All the changes are usually noted in this file when they are checked
into the cvs repository.

2000-01-25  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_attrib.c: Added o_attrib_add_attrib which takes some parms
	  and adds a text attribute to the selected object.

	* src/i_callbacks.c: Modified misc-misc callback to test and demo
	  the above function.

2000-01-19  Matt Ettus  <matt@ettus.com>

	* src/x_dialog.c:  Merged in Ales's changes

	* src/x_dialog.c:  Lot's of rework on multi-attrib editor

2000-01-18  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/x_dialog.c: Moved some code around and added a check to 
	  the multiple attrib edit dialog box so gschem won't crash

	* src/x_dialog.c: Filled a string (text[1]) with some thing to avoid
	  garbage chars in the multi edit dialog box

	* src/o_delete.c: Make o_delete_text a non-static function (so
	  that it can be used in routines/files

	* src/x_dialog.c: Got the delete callback on the attribute edit
	  dialog box working (by calling o_delete_text)

	* src/x_dialog.c: Moved the "hint" to the multi attrib edit dialog box
	  to place itself at the mouse pointer location (gtk_window_position)
	  to be closer to the creation time of the window to avoid dialog box
	  placement gitter.

	* src/x_dialog.c: Added a few memory frees to avoid memory leaks
	  
2000-01-17  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/i_callbacks.c: Renamed Hierarchy menu options

	* src/g_*.c: Added Hierarchy/Down Schematic and Hierarchy/Down symbol

	* src/x_menus.c: Added renamed appropriate menu options for above

	* lib/system-gschemrc.in: Updated hotkeys for above new callbacks

	* src/i_callbacks.c: Fixed page next and page prev to look at the
	  page control variable 

2000-01-13  Matt Ettus  <matt@ettus.com>
