@@ -9,6 +9,15 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+2000-01-26  Matt Ettus  <matt@ettus.com>
+
+	* src/x_dialog.c:  Added capability for Edit Attribute Dialog
+	  to handle attribute additions also
+
+	* src/x_attrsel.c:  Commented out old attrib add, made it call
+	  new dialog.
+	  NOTE:  The way it calls the new dialog is kind of indirect.
+	
 2000-01-25  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* src/o_attrib.c: Added o_attrib_add_attrib which takes some parms
